<resources>
    <string name="app_name">网易云音乐</string>
    <string name="check_service">请先勾选服务条款</string>
    <string name="input_phone">输入手机号</string>
    <string name="next_tip">下一步</string>
    <string name="register_tip">未注册手机号登录后将自动创建账号</string>
    <string name="login_tip">登录体验更多精彩</string>
    <string name="phone_login">手机号登录</string>
    <string name="phone_validate">手机号验证</string>
    <string name="validate_tip">请输入验证码</string>
    <string name="send_to">已发送至</string>
    <string name="resend">重新发送</string>
    <string name="input_validate">输入验证码</string>
    <string name="login_account">账号密码登录</string>
    <string name="input_pass">输入密码</string>
    <string name="login_now">立即登录</string>
    <string name="forget_pass">忘记密码></string>
    <string name="set_pass">设置密码</string>
    <string name="nickname_tip">请设置昵称,好的昵称能让更多人记住你哦</string>
    <string name="pass_tip">请设置密码,长度9-12位,英文加符号混合</string>
    <string name="set_nick">设置昵称</string>
    <string name="register_finish">完成</string>
    <string name="found">发现</string>
    <string name="video">视频</string>
    <string name="my">我的</string>
    <string name="radio">电台</string>
    <string name="account">账号</string>
    <string name="search_tip">在这里搜索歌曲</string>
    <string name="cancel">取消</string>
    <string name="hot_search">热搜榜</string>
    <string name="recommend_songs">推荐歌单</string>
    <string name="new_album">新碟</string>
    <string name="top_artist">歌手排行</string>
    <string name="latest_music">最新音乐</string>
    <string name="more_hot_singer">更多热歌</string>
    <string name="latest_hot">近期热门</string>
    <string name="base_info">基本信息</string>
    <string name="more_info">更多信息</string>
</resources>